@@ -1,3 +1,6 @@
+Version 5
+- Added Rerun or exit question.
+
 Version 4
 - Minor code cleanup.
 
